[gd_scene load_steps=12 format=3 uid="uid://bhpmpkmwt4wad"]

[ext_resource type="Texture2D" uid="uid://ha77xb584t5b" path="res://Assets/PlaceHolders/bomb.png" id="1_wf1yj"]
[ext_resource type="Script" path="res://Scenes/projectiles/grenade.gd" id="2_vrj3o"]
[ext_resource type="Script" path="res://Scenes/projectiles/projectile_area.gd" id="3_sb1y7"]
[ext_resource type="Script" path="res://addons/GD-Sync/Scripts/Types/PropertySynchronizer.gd" id="4_fhs8o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xfwv1"]
radius = 373.363

[sub_resource type="Animation" id="Animation_7w5es"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_y3wse"]
resource_name = "explode"
length = 0.150002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-3.21672, -3.21672)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h842j"]
_data = {
"RESET": SubResource("Animation_7w5es"),
"explode": SubResource("Animation_y3wse")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hb6b8"]
animation = &"explode"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k2284"]
advance_mode = 2
advance_condition = &"explode"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6jog3"]
states/Start/position = Vector2(195, 90)
states/explode/node = SubResource("AnimationNodeAnimation_hb6b8")
states/explode/position = Vector2(444, 90)
transitions = ["Start", "explode", SubResource("AnimationNodeStateMachineTransition_k2284")]

[node name="Grenade" type="Sprite2D"]
position = Vector2(113, 57)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_wf1yj")
script = ExtResource("2_vrj3o")
lag_frames = 35

[node name="Area2D" type="Area2D" parent="." groups=["weak"]]
collision_layer = 0
collision_mask = 25
script = ExtResource("3_sb1y7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(100, 130)
shape = SubResource("CircleShape2D_xfwv1")

[node name="PropertySynchronizer2" type="Node" parent="."]
script = ExtResource("4_fhs8o")
node_path = NodePath("..")
property_name = "scale"
interpolated = false
interpolation_speed = 1.0

[node name="PropertySynchronizer" type="Node" parent="."]
script = ExtResource("4_fhs8o")
refresh_rate = 120
node_path = NodePath("..")
property_name = "position"
interpolated = false
interpolation_speed = 1.0

[node name="PropertySynchronizer3" type="Node" parent="."]
script = ExtResource("4_fhs8o")
refresh_rate = 60
node_path = NodePath("..")
property_name = "dmg"
interpolated = false
interpolation_speed = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h842j")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6jog3")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/explode = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
